--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
   </head>
 
   <body style="background-color: #eeeed3;">
-    <nav class="navbar navbar-expand-lg custom-navbar">
-      <div class="container" style="margin-left: auto;">
+<nav class="container navbar navbar-expand-lg navbar-light" style="background-color: #eeeed3;">
+  <div style="margin-left: auto;">
         <% if admin_signed_in? %>
           <%= link_to 'Wander Mate', admin_top_path, class: 'navbar-brand header-logo',
           style: 'font-size: 30px; color: #33231d;' %>
@@ -25,25 +25,27 @@
           <%= link_to 'Wander Mate', root_path, class: 'navbar-brand header-logo',
           style: 'font-size: 30px; color: #33231d;' %>
         <% end %>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+  </div>
+        <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ml-auto">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
               <li class="mt-3 mr-3">
                 <strong style="color: #33231d;">ようこそ、<%= current_user.name %>さん！</strong>
               </li>
               <li class="nav-item">
-                <%= link_to new_post_path, class: "nav-link" do %>
+                <%= link_to new_post_path, class: "nav-link text-right" do %>
                   <button class="btn btn-outline-dark header-post-new-button" style="border-radius: 25px;">
                     新規投稿 <i class="fa-solid fa-pen"></i>
                   </button>
                 <% end %>
               </li>
               <li class="nav-item">
-                <%= link_to my_page_path, class: "nav-link" do %>
+                <%= link_to my_page_path, class: "nav-link text-right" do %>
                   <button class="btn btn-outline-dark header-button" style="border-radius: 25px;">
                     マイページ
                   </button>
@@ -88,9 +90,9 @@
               </li>
             <% end %>
           </ul>
-        </div>
-      </div>
-    </nav>
+
+  </div>
+</nav>
 
     <% if user_signed_in? || admin_signed_in? %>
       <div class="search-container">
