--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -65,7 +65,7 @@
   </table>
   <% end %>
 
-  <div class="row d-flex justify-content-center mt-4" style="margin-bottom: 80px;">
+  <div class="row d-flex justify-content-center mt-4" style="width: 300px; margin: 0 auto 80px;">
     <%= render "user/shared/links" %>
   </div>
 
