--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -124,7 +124,6 @@
   background-color: #eeeed3 !important;
   border: 2px solid #33231d !important;
   color: #33231d !important;
-  width: 145px;
 }
 
 .post-edit-button:hover {
@@ -302,7 +301,7 @@
 
 .liked-posts-title {
   font-weight: bold;
-  font-size: 18px
+  font-size: 20px
 }
 
 .mypage-profile-table, .user-profile-table {
@@ -495,6 +494,10 @@
     .liked-posts-title {
       font-weight: bold;
       font-size: 12px
+    }
+
+    .liked-posts-user-name {
+      font-size: 10px;
     }
 
     .mypage-profile-table, .user-profile-table {
