--- a/app/views/user/users/likes.html.erb
+++ b/app/views/user/users/likes.html.erb
@@ -32,6 +32,6 @@
   </tbody>
 </table>
 
-<div class="pagination d-flex justify-content-center mt-5 mb-5">
+<div class="pagination d-flex justify-content-center mt-5" style="margin-bottom: 60px;">
   <%= paginate @liked_posts %>
 </div>
