--- a/app/views/admin/searches/search.html.erb
+++ b/app/views/admin/searches/search.html.erb
@@ -1,6 +1,5 @@
-
 <% if @range == "ユーザー" %>
-  <div class="container" style="width: 40%;">
+  <div class="container search-result" style="width: 50%;">
     <div class="text-center text-color mt-5 mb-5">
       <div style="font-weight: bold; font-size: 30px;">
         <i class="fa-solid fa-magnifying-glass"></i> 「<%= @word %>」の検索結果
@@ -14,11 +13,11 @@
             <td style="display: flex; justify-content: space-between; align-items: center;">
               <div style="display: flex; align-items: center;">
                 <%= image_tag user.get_profile_image(70, 70), class: "rounded-circle" %>
-                <span style="font-size: 25px; padding-left: 20px; color: #33231d;"><%= user.name %></span>
+                <span class="admin-search-result-user-name"><%= user.name %></span>
               </div>
               <span>
                 <%= link_to admin_user_path(user), class: "text-dark" do %>
-                  <button class="btn btn-outline-secondary button" style="border-radius: 25px;">詳細を見る</button>
+                  <button class="btn admin-search-user-detail-button" style="border-radius: 25px;">詳細を見る</button>
                 <% end %>
               </span>
             </td>
@@ -32,7 +31,7 @@
     </table>
   </div>
 <% elsif @range == "投稿" %>
-  <div class="container" style="width: 50%;">
+  <div class="container search-result" style="width: 50%;">
     <div class="text-center text-color mt-5 mb-5">
       <div style="font-weight: bold; font-size: 30px;">
         <i class="fa-solid fa-magnifying-glass"></i> 「<%= @word %>」の検索結果
