--- a/app/views/user/users/likes.html.erb
+++ b/app/views/user/users/likes.html.erb
@@ -32,6 +32,6 @@
   </tbody>
 </table>
 
-<div class="pagination d-flex justify-content-center mt-5" style="margin-bottom: 100px;">
+<div class="pagination d-flex justify-content-center" style="margin-top: 70px; margin-bottom: 70px;">
   <%= paginate @liked_posts %>
 </div>
