--- a/app/views/user/users/mypage.html.erb
+++ b/app/views/user/users/mypage.html.erb
@@ -27,7 +27,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="3" class="text-center" style="font-size: 22px;"><%= @user.bio %></td>
+      <td colspan="3" class="bio-text text-center"><%= @user.bio %></td>
     </tr>
     <tr><td colspan="3" style="height: 10px;"></td></tr>
     <tr>
