レイアウト調整

--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -21,7 +21,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="3" class="text-center bio-text" style="font-size: 22px;"><%= @user.bio %></td>
+      <td colspan="3" class="text-center bio-text"><%= @user.bio %></td>
     </tr>
     <tr>
       <td colspan="3" class="text-center">
