--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -3,19 +3,19 @@
     <%= form_with url: admin_search_path, local: true, method: :get do |f| %>
       <%= f.select :range, options_for_select([['ユーザー'], ['投稿']]) %>
       <%= f.text_field :word, placeholder: "検索ワードを入力" %>
-      <%= f.submit "検索", class: "btn btn-outline-dark header-button" %>
+      <%= f.submit "検索", class: "btn search-button" %>
     <% end %>
   <% elsif user_signed_in? %>
     <%= form_with url: search_path, local: true, method: :get do |f| %>
       <%= f.select :range, options_for_select([['ユーザー'], ['投稿']]) %>
       <%= f.text_field :word, placeholder: "検索ワードを入力" %>
-      <%= f.submit "検索", class: "btn btn-outline-dark header-button" %>
+      <%= f.submit "検索", class: "btn search-button" %>
     <% end %>
   <% else %>
     <%= form_with url: search_path, local: true, method: :get do |f| %>
       <%= f.select :range, options_for_select([['ユーザー'], ['投稿']]) %>
       <%= f.text_field :word, placeholder: "検索ワードを入力" %>
-      <%= f.submit "検索", class: "btn btn-outline-dark header-button" %>
+      <%= f.submit "検索", class: "btn search-button" %>
     <% end %>
   <% end %>
 </div>
