--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,6 @@
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
   </head>
 
   <body style="background-color: #eeeed3;">
@@ -33,58 +32,58 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
-            <li class="mt-3 mr-3">
+            <li class="mt-3 mr-3 nav-link text-right">
               <strong style="color: #33231d;">ようこそ、<%= current_user.name %>さん！</strong>
             </li>
             <li class="nav-item">
               <%= link_to new_post_path, class: "nav-link text-right" do %>
-                <button class="btn btn-outline-dark header-post-new-button" style="border-radius: 25px;">
+                <button class="btn header-post-new-button">
                   新規投稿 <i class="fa-solid fa-pen"></i>
                 </button>
               <% end %>
             </li>
             <li class="nav-item">
               <%= link_to my_page_path, class: "nav-link text-right" do %>
-                <button class="btn btn-outline-dark header-button" style="border-radius: 25px;">
+                <button class="btn header-button">
                   マイページ
                 </button>
               <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-dark text-right" do %>
-                <button class="btn btn-outline-dark header-button" style="border-radius: 25px;">
+              <%= link_to destroy_user_session_path, method: :delete, class: "nav-link text-right" do %>
+                <button class="btn header-button">
                   ログアウト
                 </button>
               <% end %>
             </li>
           <% elsif admin_signed_in? %>
-            <li class="mt-3 mr-3">
+            <li class="mt-3 mr-3" style="color:  #33231d;">
               ※管理者ログイン中
             </li>
             <li class="nav-item">
-              <%= link_to admin_posts_path, class: "nav-link text-dark text-right" do %>
-                <button class="btn btn-outline-dark header-button" style="border-radius: 25px;">投稿一覧</button>
+              <%= link_to admin_posts_path, class: "nav-link text-right" do %>
+                <button class="btn header-button">投稿一覧</button>
               <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to admin_users_path, class: "nav-link text-dark text-right" do %>
-                <button class="btn btn-outline-dark header-button" style="border-radius: 25px;">ユーザー一覧</button>
+              <%= link_to admin_users_path, class: "nav-link text-right" do %>
+                <button class="btn header-button">ユーザー一覧</button>
               <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link text-dark text-right" do %>
-                <button class="btn btn-outline-dark header-button" style="border-radius: 25px;">ログアウト</button>
+              <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link text-right" do %>
+                <button class="btn header-button">ログアウト</button>
               <% end %>
             </li>
           <% else %>
             <li class="nav-item">
-              <%= link_to new_user_registration_path, class: "nav-link text-dark text-right" do %>
-                <button class="btn btn-outline-dark header-button" style="border-radius: 25px;">会員登録</button>
+              <%= link_to new_user_registration_path, class: "nav-link text-right" do %>
+                <button class="btn header-button">会員登録</button>
               <% end %>
             </li>
             <li class="nav-item">
-              <%= link_to new_user_session_path, class: "nav-link text-dark text-right" do %>
-                <button class="btn btn-outline-dark header-button" style="border-radius: 25px;">ログイン</button>
+              <%= link_to new_user_session_path, class: "nav-link text-right" do %>
+                <button class="btn header-button">ログイン</button>
               <% end %>
             </li>
           <% end %>
