admin/topコード修正

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,12 +15,13 @@
   background-color: #ea4335 !important;
   border: 2px solid #33231d !important;
   color: #eeeed3 !important;
+  border-radius: 25px !important;
   width: 150px;
   transition: background-color 0.3s, color 0.3s;
 }
 
 .button:hover, .admin-search-user-detail-button:hover {
-  background-color: #ed9f82 !important; /* ホバー時の背景色 */
+  background-color: #ed9f82 !important;
 }
 
 .custom-navbar {
@@ -89,24 +90,24 @@
 
 .sign-up-button {
   background-color: #ea4335 !important;
-  border: 2px solid #33231d !important; /* 枠線の太さと色を指定 */
+  border: 2px solid #33231d !important;
   color: #eeeed3 !important;
   width: 150px;
   transition: background-color 0.3s, color 0.3s;
 }
 
 .sign-up-button:hover {
-  background-color: #ed9f82 !important; /* ホバー時の背景色 */
+  background-color: #ed9f82 !important;
 }
 
 .top-post-card {
-  width: 50%; /* 幅は50% */
-  margin: auto; /* 中央寄せ */
-  margin-top: 20px; /* 上のマージン */
-  border-radius: 25px; /* 角を丸く */
-  overflow: hidden; /* 内容がはみ出さないように */
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* ボックスシャドウ */
-  background-color: #fff; /* 背景色を白に */
+  width: 50%;
+  margin: auto;
+  margin-top: 20px;
+  border-radius: 25px !important;
+  overflow: hidden;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
 }
 
 .follow-button, .search-to-chat-button {
