--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -13,21 +13,21 @@
 <div class="container text-color" style="width: 100%;" >
   <div class="d-flex justify-content-center mt-5 mb-5">
     <div style="font-weight: bold; font-size: 30px;">
-      <i class="fa-solid fa-map-pin" style="color: #33231d;"></i> <span style="color: #33231d;">みんなの投稿</span>
+      <i class="fa-solid fa-map-pin"></i> みんなの投稿
     </div>
   </div>
 </div>
 
 
   <% @posts.each do |post| %>
-    <div class="card top-post-card shadow mb-3" style="border-radius: 25px;">
+    <div class="card shadow top-post-card mb-3">
       <% if post.post_image.attached? %>
         <%= image_tag post.post_image, class: "card-img-top", style: "width: 100%;" %>
       <% else %>
         <%= image_tag 'no_image2.png', class: "card-img-top", style: "width: 100%;" %>
       <% end %>
       <div class="card-body text-color">
-        <h5 class="card-title" style="font-weight: bold; font-size: 20px" ><%= post.title %></h5>
+        <h5 style="font-weight: bold; font-size: 20px" ><%= post.title %></h5>
         <p>
           <%= link_to admin_user_path(post.user) do %>
             <%= image_tag post.user.get_profile_image(40, 40), class: "rounded-circle" %>
@@ -35,11 +35,11 @@
           <% end %>
           <i class="fa-regular fa-clock"></i> 投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %>
         </p>
-        <p class="card-text"><%= post.body %></p>
-        <p class="card-text">
+        <p><%= post.body %></p>
+        <p>
           <div class="d-flex justify-content-between align-items-center">
             <%= link_to admin_post_path(post.id) do %>
-              <button class="btn btn-dark button" style="border-radius: 25px;">詳細を見る</button>
+              <button class="btn button">詳細を見る</button>
             <% end %>
             <div class="d-flex align-items-center mr-3">
               <i class="fa-regular fa-heart mr-2 fa-2x"></i>
