--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="admin-posts-index-container">
 
-  <div class="text-center mt-5 mb-5 text-color">
+  <div class="text-center text-color mt-5 mb-5">
     <div style="font-weight: bold; font-size: 30px;">
       投稿一覧
     </div>
@@ -16,7 +16,7 @@
             <% end %>
           </td>
           <td>
-            <div style="font-size: 18px; margin-left: 3px; color: #33231d;">
+            <div class="admin-posts-index-user-name">
               <%= post.user.name %>
             </div>
             <div class="admin-posts-index-title">
