--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,17 +1,13 @@
-<div class="card post-show-card shadow-lg" style="border-radius: 25px;">
+<div class="card post-show-card shadow-lg">
   <div class="card-header d-flex justify-content-between align-items-center">
-    <div class="d-flex align-items-center">
-      <%= link_to admin_user_path(@post.user) do %>
-        <%= image_tag @post.user.get_profile_image(50, 50), class: "rounded-circle" %>
-        <span style="font-weight: bold; font-size: 20px; margin-left: 10px; color: #33231d;"><%= @post.user.name %>
-      <% end %>
-    </div>
+    <%= link_to admin_user_path(@post.user) do %>
+      <%= image_tag @post.user.get_profile_image(50, 50), class: "rounded-circle" %>
+      <span style="font-weight: bold; font-size: 20px; margin-left: 10px; color: #33231d;"><%= @post.user.name %>
+    <% end %>
     <% if admin_signed_in? %>
-      <div class="ml-auto d-flex">
-        <%= link_to '削除 <i class="fa-solid fa-trash-can"></i>'.html_safe,
-        admin_post_path, method: :delete, data: { confirm: '本当に消しますか？' },
-        class: "btn btn-outline-danger post-delete-button", style: "border-radius: 25px;"%>
-      </div>
+      <%= link_to '削除 <i class="fa-solid fa-trash-can"></i>'.html_safe,
+      admin_post_path, method: :delete, data: { confirm: '本当に消しますか？' },
+      class: "btn btn-outline-danger post-delete-button", style: "border-radius: 25px;"%>
     <% end %>
   </div>
 
@@ -21,15 +17,15 @@
     <% else %>
       <%= image_tag 'no_image2.png', class: "card-img-top", style: "width: 100%;" %>
     <% end %>
-    <h5 class="card-title" style="font-weight: bold; font-size: 30px; margin-top: 20px;" ><%= @post.title %></h5>
+    <h5 class="card-title"><%= @post.title %></h5>
     <i class="fa-regular fa-clock"></i> 投稿日：<%= @post.created_at.strftime("%Y年%m月%d日") %>
     <span style="margin: 0 6px;">&nbsp;</span>
     <i class="fa-solid fa-rotate-right"></i> 最終変更日：<%= @post.updated_at.strftime("%Y年%m月%d日") %>
     <p class="card-text mt-3" style="font-size: 20px"><%= @post.body %></p>
     <div class="d-flex justify-content-left">
-      <i class="fa-regular fa-heart fa-2x mr-1" style="color: #33231d;"></i>
+      <i class="fa-regular fa-heart fa-2x mr-1"></i>
       <span style="font-size: 24px;"><%= @post.likes.count %></span>
-      <i class="fa-regular fa-comment-dots fa-2x ml-3 mr-1" style="color: #33231d;"></i>
+      <i class="fa-regular fa-comment-dots fa-2x ml-3 mr-1"></i>
       <span style="font-size: 24px;"><%= @post.post_comments.count %></span>
     </div>
 
@@ -53,6 +49,5 @@
       </tr>
       <% end %>
     </table>
-
   </div>
 </div>
